feat: add endpoint to fetch all chapters of Whitenest
